# src/main/resources/static/api-spec.yml
@@ -20,7 +20,7 @@ tags:
   - name: Contract
   - name: Vendor
   - name: Cash Out
-  - name: Cash In (On Progress)
+  - name: AR Invoice Monitoring
 paths:
   /api/getEncryptedPassword:
     get:
@@ -32,7 +32,7 @@ paths:
           in: query
           schema:
             type: string
-          example: password
+          example: 'password'
       responses:
         '200':
           description: Successful response
@@ -69,8 +69,8 @@ paths:
             schema:
               type: object
               example:
-                username: username
-                password: password
+                username: 'username'
+                password: 'password'
       parameters:
         - name: ''
           in: header
@@ -92,8 +92,8 @@ paths:
             schema:
               type: object
               example:
-                username: username
-                password: password
+                username: 'username'
+                password: 'password'
       security:
         - bearerAuth: []
       responses:
@@ -113,8 +113,8 @@ paths:
               type: object
               example:
                 oldUsername: username
-                newUsername: lorddev
-                fullName: fullName
+                newUsername: newUsername
+                fullName: username
                 password: password
       responses:
         '200':
@@ -133,8 +133,8 @@ paths:
               type: object
               example:
                 username: username
-                newPassword: password
-                oldpassword: password
+                newPassword: newPassword
+                oldPassword: oldPassword
       responses:
         '200':
           description: Successful response
@@ -161,7 +161,7 @@ paths:
           in: query
           schema:
             type: string
-          example: LordDev
+          example: username
       responses:
         '200':
           description: Successful response
@@ -892,7 +892,7 @@ paths:
   /api/cashOut/getCashOutMutationPaging:
     get:
       tags:
-        - Cash In (On Progress)
+        - Cash Out
       summary: Get Cash Out Mutation Paging
       parameters:
         - name: pageNo
@@ -936,7 +936,7 @@ paths:
   /api/cashOut/getCashOutDocPaging:
     get:
       tags:
-        - Cash In (On Progress)
+        - Cash Out
       summary: Get Cash Out Doc Paging
       parameters:
         - name: pageNo
@@ -979,7 +979,7 @@ paths:
   /api/cashOut/getCashOutDocByName:
     get:
       tags:
-        - Cash In (On Progress)
+        - Cash Out
       summary: Get Cash Out Doc Details
       parameters:
         - name: username
@@ -992,7 +992,7 @@ paths:
           schema:
             type: string
           description: MANDATORY
-          example: HK-CO-240907-041515
+          example: HK-CO-240909-022507
       responses:
         '200':
           description: Successful response
@@ -1045,7 +1045,7 @@ paths:
   /api/cashOut/editCashOutDoc:
     post:
       tags:
-        - Cash In (On Progress)
+        - Cash Out
       summary: Edit Cash Out Doc
       requestBody:
         content:
@@ -1091,7 +1091,7 @@ paths:
   /api/cashOut/approvalCashOutDoc:
     post:
       tags:
-        - Cash In (On Progress)
+        - Cash Out
       summary: Approval Cash Out Doc
       requestBody:
         content: {}
@@ -1121,10 +1121,57 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /api/cashIn/createARInvoice:
+  /api/arInvoice/getArInvoicePaging:
+    get:
+      tags:
+        - AR Invoice Monitoring
+      summary: Get AR Invoice Paging
+      parameters:
+        - name: pageNo
+          in: query
+          schema:
+            type: string
+        - name: pageSize
+          in: query
+          schema:
+            type: string
+        - name: sortBy
+          in: query
+          schema:
+            type: string
+        - name: sortOrder
+          in: query
+          schema:
+            type: string
+        - name: partnerName
+          in: query
+          schema:
+            type: string
+        - name: projectName
+          in: query
+          schema:
+            type: string
+        - name: startDate
+          in: query
+          schema:
+            type: string
+        - name: endDate
+          in: query
+          schema:
+            type: string
+        - name: invoiceStatus
+          in: query
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json: {}
+  /api/arInvoice/createARInvoice:
     post:
       tags:
-        - Cash In (On Progress)
+        - AR Invoice Monitoring
       summary: Create AR Invoice
       requestBody:
         content:
@@ -1158,6 +1205,39 @@ paths:
           schema:
             type: string
           example: username
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json: {}
+  /api/arInvoice/approvalARInvoice:
+    post:
+      tags:
+        - AR Invoice Monitoring
+      summary: Approval AR Invoice
+      requestBody:
+        content: {}
+      parameters:
+        - name: ''
+          in: header
+          schema:
+            type: string
+        - name: username
+          in: query
+          schema:
+            type: string
+          example: username
+        - name: status
+          in: query
+          schema:
+            type: integer
+          description: 1 = Approve, 2 = Rejected
+          example: '1'
+        - name: invoiceNo
+          in: query
+          schema:
+            type: string
+          example: HK-INV-20240910
       responses:
         '200':
           description: Successful response
